--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,20 +1,26 @@
 <main class="main">
-    <div class="title">
-      <h2>resolving self-inflicted problems</h2> 
+  <div class="title">
+    <h2>resolving self-inflicted problems</h2> 
+  </div>
+  <a 
+    class="fuck-you-button" 
+    href="/" 
+    role="button"
+    aria-label="Return to homepage">
+    shut it
+  </a>
+  <div class="content">
+    <div class="entry">
+      <h3>The problems I have created for myself as we are easing into 2025</h3>
+      <ul>
+          <li>reviving my mobile app development interest -> this year's flavour: iOS</li>
+          <li>annoying myself into build a small and cheap homelab for backups and network issues</li>
+          <li>thinking I don't want the iPhone anymore but leaving Android as soon as something doesn't work</li>
+          <li>a picture problem: flat ads and the perspective in the photos</li>
+          <li>spotify library overexaustion, apple music frustrations</li>
+          <li>this blog-like idea that I will now have to update to be readable</li>
+      </ul>
+      <p class="entry-date">04/02/2025</p>
     </div>
-    <a class="fuck-you-button" href="/">shut it</a>
-    <div class="content">
-      <div class="entry">
-        <h3>The problems I have created for myself as we are easing into 2025</h3>
-        <uL>
-            <li>reviving my mobile app development interest -> this year's flavour: iOS</li>
-            <li>annoying myself into build a small and cheap homelab for backups and network issues</li>
-            <li>thinking I don't want the iPhone anymore but leaving Android as soon as something doesn't work</li>
-            <li>a picture problem: flat ads and the perspective in the photos</li>
-            <li>spotify library overexaustion, apple music frustrations</li>
-            <li>this blog-like idea that I will now have to update to be readable</li>
-        </uL>
-        <p class="entry-date">04/02/2025</p>
-      </div>
-    </div>
-  </main>
+  </div>
+</main>
