--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,12 @@
 <main class="main">
     <div class="title"> 
-      <h1> mjkonko </h1>
+      <h1> mikolaj </h1>
     </div>
     <div class="content">
       <div>
         <a href="https://www.github.com/mjkonko" target="_blank"> github</a> <br>
         <a href="https://www.linkedin.com/in/mjkonko" target="_blank"> linkedin</a> <br>
-        <a href="mailto:web@nenna.is">mail</a> <br>
-        <a href="/blog">thoughts</a>
+        <a href="mailto:www@nenna.is">mail</a> <br>
       </div>
     </div>
     <div class="footer">
